# TraceTutor

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: factorial.py
src/tracetutor/: __init__.py  __main__.py  cli.py  exceptions.py  explanations.py  renderer.py  runner.py  state.py  tracer.py
tests/: test_runner.py  test_step_limit.py
